# dk997467-mm-bot

./: .coverage  .coveragerc  .cursorignore  .gitattributes  .gitignore  ACCURACY_FIX_SUMMARY.md  ACCURACY_GATE_GUIDE.md  ACTION_PLAN.md  ADAPTIVE_SPREAD_RISK_GUARDS_COMPLETE.md  ADAPTIVE_SPREAD_RISK_GUARDS_IMPL_PROGRESS.md  ANTI_SLEEP_SIMPLIFY_COMPLETE.md  ARCHITECTURAL_AUDIT_COMPLETE.md  ARCHITECTURE_AUDIT_REPORT.md  ARTIFACT_AUDIT_GUIDE.md  ASYNC_BATCH_COMPLETE.md  ASYNC_BATCH_IMPLEMENTATION_SUMMARY.md  ASYNC_BATCH_QUICKSTART.md  AUDIT_ACTION_ITEMS.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_README.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY_RU.md  AUDIT_V2_COMPLETE_REPORT_RU.md  BRANCH_READINESS_SHADOW_REDIS_DRYRUN.md  CHANGELOG.md  CHANGELOG_v0.1.0.md  CHANGES_SUMMARY.txt  CHAOS_ENGINEERING_COMPLETE.md  CI_ARTIFACT_V4_MIGRATION_REPORT.md  CI_CREDENTIALS_FIX_SUMMARY.md  CI_DEEP_DIAGNOSTIC_PLAN.md  CI_DELTA_VERIFY_ALL_FIXES_COMPLETE.md  CI_DELTA_VERIFY_IMPROVEMENTS_COMPLETE.md  CI_EXIT_143_DEEP_INVESTIGATION_PLAN.md  CI_EXIT_143_DIAGNOSTIC_TOOLKIT_READY.md  CI_EXIT_143_ROOT_CAUSE_ANALYSIS.md  CI_EXIT_143_SOLUTION_SUMMARY.md  CI_NO_BASE_REQS_REPORT.md  (+334 more)
.github/: SECRETS_POLICY.md
.github/workflows/: accuracy.yml  alert-selftest.yml  ci-memory-diagnostic.yml  ci-nightly-soak.yml  ci-nightly.yml  ci.yml  continuous-soak.yml  debug-runner.yml  dryrun.yml  final-check.yml  live-oidc-example.yml  live.yml  post-soak-24-warmup.yml  security.yml  shadow.yml  soak-windows.yml  soak.yml  testnet-smoke.yml
.hypothesis/constants/: 004e722d2b39195a  007e72c346acd610  009bf9ffe163c848  00ad64eaf8aab7d3  01509ecac4355798  016ed3243ba34a0d  01767735a9e8256f  01db491f0ef653b3  02aa8a0079b29a8e  02cd58d7a26b3ca8  02fb3c1b426206d7  0303d8c7ffe4ee2d  031f85f1c11bb00b  03d65cf548ce3b23  041b82baf95116f0  (+952 more)
cli/: fees_status.py  preflight.py  replay.py  report.py  run_bot.py  shadow.py
config/: profiles.yaml  regions.yaml
coverage_edge_cli/: z_b9a00e55f22b3d77_edge_cli.py,cover
docs/: ADAPTIVE_SPREAD_AND_RISK_GUARDS.md  CHAOS_ENGINEERING.md  DOCKER_SECRETS_SETUP.md  EDGE_AUDIT.md  EXCHANGE_CONNECTIVITY.md  FINAL_CHECKLIST.md  GO_CHECKLIST.md  INDEX.md  KPI_GATE.md  OPERATIONS.md  OPS_DAY0.md  OPS_ONE_PAGER.md  OPS_QUICKSTART.md  OPS_WEEK1.md  PERFORMANCE_DASHBOARD.md  PLAN.md  PRE_CALIBRATION_READINESS.md  PRE_FREEZE_SANITY.md  RELEASE.md  REPORTS.md  REPORT_LEDGER.md  REPORT_SOAK.md  RUNBOOKS.md  SECURITY.md  SECURITY_AUDIT.md  SOAK_ANTI_SLEEP.md  SOAK_TROUBLESHOOTING.md  VALIDATION_CHECKLIST.md  research_pipeline.md
examples/: rust_orderbook_demo.py
monitoring/: COMPONENTS.md  DEPLOYMENT.md  INHIBITION_TESTING.md  README.md  WARMUP_MONITORING_README.md  alertmanager.yml  grafana_warmup_health.json  prometheus.staging.yml  prometheus.yml  prometheus_warmup_alerts.yml
my_reports/: report_2025-08-21.md
orchestrator/: rollback_watcher.py
profiles/: live_profiles.json  shadow_profiles.json
reports/: report_2024-01-15.csv  report_2024-01-15.md  report_2025-08-21.csv  report_2025-08-21.md
rust/: Cargo.toml  README.md  pyproject.toml
rust/mm_orderbook/: Cargo.toml
rust/mm_orderbook/src/: lib.rs
rust/src/: lib.rs
schema/: iter_summary.schema.json
scripts/: f1_precheck.py  pre_freeze.ps1  release.py  smoke_e1.py  smoke_f2.py
src/: __init__.py  config_models.py
strategy/: __init__.py  edge_sentinel.py
test_out_tmp/: reconcile_diff.md  turnover.csv
tests/: conftest.py  test_accuracy_compare.py  test_accuracy_polish.py  test_accuracy_sanity.py  test_admin_anti_stale_guard.py  test_admin_audit_hmac_signatures.py  test_admin_audit_log.py  test_admin_autopolicy_endpoints.py  test_admin_chaos_endpoint.py  test_admin_deterministic_json_errors.py  test_admin_health_endpoints.py  test_admin_killswitch_endpoint.py  test_admin_latency_buckets_accumulate.py  test_admin_loader_size_limit_uniform.py  test_admin_rate_limit.py  test_admin_rate_limit_unified.py  test_admin_request_counters.py  test_admin_reset_hwm_handler.py  test_admin_rollout_pins_and_salt.py  test_admin_rollout_promote_endpoint.py  test_admin_rollout_ramp_endpoint.py  test_admin_rollout_split.py  test_admin_rollout_state_handlers.py  test_admin_token_auth.py  test_admin_token_rotation.py  test_alerts_firing.py  test_alerts_integration.py  test_alerts_log_append_and_clear.py  test_alerts_yaml.py  test_allocator_backcompat_signature.py  test_allocator_budget_pnl.py  test_allocator_cost_caps_and_fallbacks.py  test_allocator_cost_caps_edge.py  test_allocator_cost_determinism_ordering.py  test_allocator_cost_dynamic_spread.py  test_allocator_cost_dynamic_volume.py  test_allocator_cost_fallback_and_metrics_cardinality.py  test_allocator_cost_inputs_metrics.py  test_allocator_cost_knobs_edges.py  test_allocator_cost_l5_integration_edges.py  (+376 more)
tools/: __init__.py  edge_audit.py  edge_cli.py  freeze_config.py
(+825 files in other folders)
