# ==============================================================================
# Modern Python Project Configuration (PEP 621)
# Principal Architect's Notes:
# - Added 'maturin' to the build-system requirements. This tells pip/setuptools
#   that maturin is needed to correctly build any sub-packages (like our Rust
#   module) during the installation process. This is the final piece of the puzzle.
# ==============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel", "maturin>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-bot"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" }, # Замени на свои данные
]
description = "Market maker rebate bot"
requires-python = ">=3.9"
dependencies = [
    # Эта строка говорит: "пакет mm-orderbook находится в папке rust"
    # Синтаксис `file:rust` корректен для современных pip.
    "mm-orderbook @ file:rust"
]

# --- ФИНАЛЬНАЯ ИСПРАВЛЕННАЯ СЕКЦИЯ ---
[tool.setuptools.packages.find]
where = ["."]          # Искать пакеты в корневой директории (самый надежный способ)
include = ["mm_bot*", "tools*", "src*", "cli*"]  # Находить все основные пакеты

