[package]
name = "mm-orderbook"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Market Maker Team"]
description = "High-performance L2 order book for Python via pyo3"

[lib]
name = "mm_orderbook"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py311"] }
indexmap = "2"
# FINAL FIX: Add the library that allows using floats as hash keys
ordered-float = "4.2.0"

