[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mm-orderbook"
version = "0.1.0"
description = "Python bindings for a high-performance L2 order book (Rust+pyo3)"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = []
module-name = "mm_orderbook"
bindings = "pyo3"
python-source = "python"


