# Этот файл говорит, что для сборки проекта в папке /rust
# нужно использовать сборщик 'maturin'.
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# Эта секция помогает maturin и pip понять, что это за проект.
[project]
name = "mm-orderbook"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]


